Apply wrapper to fix dark mode

--- a/examples/Web Apps/Framework Examples/React/ServiceHealthDashboard/src/styles/main.scss
+++ b/examples/Web Apps/Framework Examples/React/ServiceHealthDashboard/src/styles/main.scss
@@ -2,5 +2,12 @@
 @use "@ni/nimble-react/styles/fonts" as *;
 body,
 #root {
+  height: 100%;
+  width: 100%;
+}
+
+.app-wrapper {
+  height: 100%;
+  width: 100%;
   background-color: $ni-nimble-application-background-color;
 }
